# DOOR-SLAM

./: .gitignore
simulation/robust_distributed_slam_simulation/buzz_slam/robust_distributed_mapper/cpp/tests/: CMakeLists.txt  test_distributed_mapper.cpp
simulation/robust_distributed_slam_simulation/buzz_slam/robust_distributed_mapper/docs/: _between_chordal_factor_8h.html  _between_chordal_factor_8h__dep__incl.md5  _between_chordal_factor_8h__incl.md5  _between_chordal_factor_8h_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _distributed_mapper_8cpp.html  _distributed_mapper_8cpp__incl.md5  _distributed_mapper_8h__dep__incl.md5  _distributed_mapper_8h__incl.map  _distributed_mapper_8h__incl.md5  _distributed_mapper_8h_source.html  _distributed_mapper_utils_8h__dep__incl.md5  _distributed_mapper_utils_8h__incl.map  _distributed_mapper_utils_8h_source.html  _multi_robot_utils_8cpp__incl.map  _multi_robot_utils_8cpp__incl.md5  _multi_robot_utils_8h.html  _multi_robot_utils_8h__dep__incl.md5  _multi_robot_utils_8h__incl.map  _multi_robot_utils_8h__incl.md5  _r_e_a_d_m_e_8md.html  class_f_m_c_1_1_c_graph_i_o-members.html  classdistributed__mapper_1_1_distributed_mapper-members.html  classdistributed__mapper_1_1_distributed_mapper.html  classdistributed__pcm_1_1_distributed_p_c_m-members.html  classes.html  classglobal__map_1_1_global_map-members.html  classglobal__map_1_1_global_map.html  classglobal__map_1_1_global_map__coll__graph.map  classgtsam_1_1_between_chordal_factor-members.html  classgtsam_1_1_between_chordal_factor.html  classgtsam_1_1_between_chordal_factor__coll__graph.md5  classpairwise__consistency_1_1_pairwise_consistency.html  classrobot__local__map_1_1_robot_local_map-members.html  classrobot__local__map_1_1_robot_local_map.html  classrobot__local__map_1_1_robot_measurements-members.html  classrobot__local__map_1_1_robot_measurements.html  dir_000006_000007.html  dir_000008_000009.html  dir_000010_000011.html  (+162 more)
simulation/robust_distributed_slam_simulation/buzz_slam/robust_distributed_mapper/docs/search/: all_10.js  all_11.js  all_16.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_a.js  all_c.js  classes_0.js  classes_2.js  defines_5.js  defines_7.js  enums_0.js  enums_1.js  enumvalues_1.js  enumvalues_3.js  files_0.js  files_4.js  files_5.js  files_8.js  functions_1.js  functions_12.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_b.js  functions_d.js  functions_f.js  groups_0.js  groups_1.js  pages_1.js  typedefs_3.js  typedefs_5.js  typedefs_6.js  variables_2.js  variables_3.js  variables_5.js  (+5 more)
simulation/robust_distributed_slam_simulation/buzz_slam/robust_distributed_mapper/octave/: generateSimulationDataset.m  plotG2oGraph.m
simulation/robust_distributed_slam_simulation/buzz_slam/robust_distributed_mapper/octave/posegraph_utils/: generateOutliers.m  generateSeparators.m  generateTrajectory.m  quat2rot.m  readG2oDataset3D.m  rot_mat_x.m  rot_mat_z.m
tx2-setup/robust_pose_graph_optimization/buzz_slam/robust_distributed_mapper/cpp/: CMakeLists.txt
tx2-setup/robust_pose_graph_optimization/buzz_slam/robust_distributed_mapper/cpp/examples/: robust_distributed_optimization_example_2robots.cpp
tx2-setup/robust_pose_graph_optimization/buzz_slam/robust_distributed_mapper/cpp/include/distributed_mapper/: distributed_mapper.h
tx2-setup/robust_pose_graph_optimization/buzz_slam/robust_distributed_mapper/cpp/src/distributed_mapper/: distributed_mapper_utils.cpp  evaluation_utils.cpp
tx2-setup/robust_pose_graph_optimization/buzz_slam/robust_distributed_mapper/cpp/src/pairwise_consistency_maximization/graph_utils/: graph_utils_functions.cpp
tx2-setup/robust_pose_graph_optimization/buzz_slam/robust_distributed_mapper/cpp/tests/: test_between_chordal_factor.cpp  test_decentralization.cpp  test_robust_distributed_mapper.cpp
tx2-setup/robust_pose_graph_optimization/buzz_slam/robust_distributed_mapper/docs/: _between_chordal_factor_8h__dep__incl.map  _between_chordal_factor_8h__incl.map  _c_make_c_compiler_id_8c.html  _distributed_mapper_8cpp__incl.map  _distributed_mapper_8h.html  _distributed_mapper_8h__dep__incl.map  _distributed_mapper_utils_8h.html  _distributed_mapper_utils_8h__dep__incl.map  _distributed_mapper_utils_8h__incl.md5  _multi_robot_utils_8cpp.html  _multi_robot_utils_8h__dep__incl.map  _multi_robot_utils_8h_source.html  annotated.html  class_f_m_c_1_1_c_graph_i_o.html  classdistributed__pcm_1_1_distributed_p_c_m.html  classglobal__map_1_1_global_map__coll__graph.md5  classgtsam_1_1_between_chordal_factor__coll__graph.map  classpairwise__consistency_1_1_pairwise_consistency-members.html  dir_000010_000013.html  dir_000011_000010.html  dir_000012_000014.html  dir_000015_000014.html  dir_000016_000007.html  dir_000017_000007.html  dir_000017_000009.html  dir_000017_000021.html  dir_000019_000009.html  dir_000020_000007.html  dir_000020_000009.html  dir_000021_000025.html  dir_000022_000009.html  dir_000024_000007.html  dir_000024_000009.html  dir_00d27264440ce8f75f1ff275a8051a81.html  dir_00d27264440ce8f75f1ff275a8051a81_dep.map  dir_00d27264440ce8f75f1ff275a8051a81_dep.md5  dir_07f37e320deb3031a60f4b23b9c60eb5_dep.map  dir_0889940190a3d7aeaf60b4fab82d00ba.html  dir_1f47a0ab8684a251fa8b6393cf981802_dep.map  dir_2630124b4aa9133a9768e46ad08808e2.html  (+143 more)
tx2-setup/robust_pose_graph_optimization/buzz_slam/robust_distributed_mapper/docs/search/: all_0.js  all_1.js  all_12.js  all_13.js  all_14.js  all_15.js  all_5.js  all_9.js  all_b.js  all_d.js  all_f.js  classes_3.js  classes_4.js  defines_1.js  enumvalues_0.js  enumvalues_2.js  enumvalues_4.js  files_2.js  files_7.js  functions_0.js  functions_10.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  (+19 more)
tx2-setup/robust_pose_graph_optimization/buzz_slam/robust_distributed_mapper/octave/: plotFullGraph.m
tx2-setup/slam_front_end/docker/multi_robot_slam_tx2/: Dockerfile  buzz_slam_ros.cpp
tx2-setup/slam_front_end/docker/realsense_bionic_tx2/: Dockerfile
(+82 files in other folders)
